# jsondict

./: LICENSE  README.md  setup.cfg
