[metadata]
name = ahowley
version = 0.0.0
author = Alex Howley
author_email = howley.alex@gmail.com
description = A lightweight container that extends dict to read and write nested json lists and dicts to json, instead of to memory.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ahowley/jsondict
project_urls =
    Bug Tracker = https://github.com/ahowley/jsondict/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = jsondictionary
packages = find:
python_requires = >=3.9

[options.packages.find]
where = jsondictionary